# VideoWorkflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_INTRO.md  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/workspace/[id]/cinema/: page.tsx
frontend/app/workspace/[id]/script/: page.tsx
frontend/app/workspace/[id]/visuals/: page.tsx
frontend/components/: Cinema.tsx  CreationHub.tsx  ScriptEditor.tsx  VisualDirector.tsx
frontend/types/: index.ts
references/: README.txt
src/video_workflow/: config.py  main.py  templates.py  types.py
src/video_workflow/core/: analysis.py  orchestrator.py  video_processing.py
src/video_workflow/generators/: base.py  image.py  llm.py  video.py
src/video_workflow/server/: app.py  schemas.py
src/video_workflow/server/routers/: files.py  workflow.py
