[project]
name = "video-workflow"
version = "0.1.0"
description = "Automated short drama storyboard video generation agent"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "volcengine-python-sdk[ark]>=1.0.0",
    "openai>=1.0.0",
    "zhipuai>=2.0.0"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_workflow"]
